data/derived/sp14/progs/unify/prog1842.ml.out
Characters 50-64:
  f b in ( f, f b = b ) , b );;
         ^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
